# prsync

./: LICENSE  README.md  prsync.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_prsync.py
