[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "prsync"
version = "0.1.0"
description = "Parallel rsync tool with SSH multiplexing"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "axsddlr"}]
dependencies = []

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]
